--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,6 +6,7 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application
+        android:name="com.dmtware.chf.network.AppController"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher2"
         android:label="@string/app_name"
@@ -42,5 +43,7 @@
             android:label="@string/title_activity_offer_detail">
         </activity>
     </application>
+
+
 
 </manifest>
